fix: properly align dialogs

--- a/verse-styles.css
+++ b/verse-styles.css
@@ -2,7 +2,8 @@ body {
     min-height: unset !important;
 }
 
-[class*="HeaderContainer_root"] {
+.verse-header,
+.verse-footer {
     display: none !important;
 }
 
